[metadata]
name = trafficinterventions
version = 0.0.2
author = WSL, IIITB
author_email = vijay.jaisankar@iiitb.ac.in
description = Python Package to perform simple Traffic Interventions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WSL-IIITB/Traffic-Interventions
project_urls =
    Bug Tracker = https://github.com/WSL-IIITB/Traffic-Interventions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src